# EmbyStream

./: .dockerignore  .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  Dockerfile.web  README.md  build.rs  config.toml  emby-backend.service.template
.cargo/: config.toml
.github/workflows/: build-docker-manual.yaml  build-docker.yaml  build-manual.yml  build-release.yaml  ci-rust.yaml  ci-web.yaml  ci.yaml
doc/: code_review_analysis.md  input.html  switch.html
docs/: cli.md  configuration-reference.md  google-oauth-desktop-app-setup.en.md  google-oauth-desktop-app-setup.zh-CN.md  user-guide.md
locales/: en.json  zh.json
scripts/: build-binary.sh  build-docker.sh  build_i18n.py  wizard_locale_patch.py
src/: app.rs  build.rs  cli.rs  cli_lang.rs  domain.rs  error.rs  i18n.rs  lib.rs  log_stream.rs  macros.rs  main.rs  test_support.rs
src/api/: alist_api.rs  alist_operation.rs  alist_response.rs  emby_api.rs  mod.rs  photo_message.rs  telegram_api.rs  telegram_operation.rs  telegram_response.rs  text_message.rs
src/api/alist/: api.rs  mod.rs  operation.rs
src/api/download/: api.rs  mod.rs
src/api/emby/: api.rs  mod.rs  operation.rs
src/api/emby/response/: mod.rs  playback_info.rs  user.rs
src/api/openlist/: api.rs  operation.rs
src/api/openlist/response/: mod.rs  response.rs  types.rs
src/api/telegram/: api.rs  mod.rs  operation.rs
src/api/telegram/request/: mod.rs  (+2 more)
src/auth/: google.rs
src/cache/: builder.rs  cache.rs  file_metadata.rs  mod.rs
src/cache/crypto/: builder.rs  cache.rs  cache_inner.rs  cache_manager.rs  mod.rs
src/cache/file/: builder.rs  cache.rs  cache_inner.rs  cached.rs  entry.rs  entry_state.rs  error.rs  handle_entry.rs  metadata.rs  mod.rs  pool.rs
src/cache/general/: cache.rs
src/cache/metadata/: cache.rs  mod.rs  prefetch.rs  types.rs
src/cache/ratelimiter/: cache.rs  mod.rs  types.rs
src/cache/transcoding/: cache.rs  mod.rs  types.rs
src/cli_wizard/: discover.rs  emit.rs  l10n.rs  mask.rs  mod.rs  persist.rs  regex_lab.rs  template_payload.rs  terminal.rs  tests_wizard.rs  wizard.rs  wizard_input_theme.rs
src/client/: alist_client.rs  client_builder.rs  emby_client.rs  markdown.rs  mod.rs  telegram_client.rs
src/client/alist/: client.rs
src/client/download/: client.rs
src/client/emby/: client.rs  mod.rs  playback_info_service.rs
src/client/google_drive/: client.rs  mod.rs
src/client/openlist/: client.rs
src/client/telegram/: client.rs
src/config/: alist.rs  backend.rs  backend_config.rs  backend_type.rs  cli.rs  config.rs  config.toml.template  core.rs  direct_link_config.rs  disk_config.rs  error.rs  frontend_config.rs  general_config.rs  http2.rs  macros.rs  mod.rs  types.rs
src/config/backend/: backend.rs  google_drive.rs  mod.rs  type.rs  types.rs  webdav.rs
src/config/frontend/: frontend.rs  mod.rs  types.rs
src/config/frontened/: frontend.rs  mod.rs
src/config/general/: general.rs  mod.rs  types.rs
src/core/: error.rs  mod.rs  redirect_info.rs  request.rs  sign.rs  sign_decryptor.rs  sign_encryptor.rs  uri_serde.rs
src/core/backend/: chunk_stream.rs  constants.rs  error.rs  google_drive.rs  google_drive_auth.rs  handler.rs  hls_server.rs  local_streamer.rs  mod.rs  proxy_mode.rs  read_stream.rs  redirect_info.rs  remote_streamer.rs  request.rs  response.rs  result.rs  service.rs  session_id.rs  source.rs  stream.rs  stream_relay.rs  types.rs  upstream_proxy.rs  webdav_auth.rs
src/core/frontend/: forward.rs  mod.rs  service.rs  types.rs
src/core/frontened/: forward.rs  mod.rs  path_parser.rs  service.rs  types.rs
src/crypto/: aes_decrypt.rs  aes_encrypt.rs  core.rs  crypto.rs  crypto_input.rs  crypto_operation.rs  crypto_output.rs  key_normalizer.rs  mod.rs
src/gateway/: cacheable_routes.rs  chain.rs  client_filter.rs  context.rs  core.rs  cors.rs  debug_paths.rs  error.rs  filtered_routes.rs  gateway.rs  logger.rs  logger_test.rs  mod.rs  options.rs  playlist_mock.rs  request_id.rs  response.rs  reverse_proxy.rs  reverse_proxy_filter.rs  svc.rs  ua_filter.rs
src/hls/: codec.rs  manager.rs  mod.rs  playlist.rs  transcoder.rs  types.rs
src/logger/: builder.rs  cleanup.rs  level.rs  mod.rs  rotation.rs
src/middleware/: chain.rs  cors.rs  gateway.rs  logger.rs  options.rs  response.rs
src/network/: curl_plugin.rs  extension.rs  http_method.rs  mod.rs  plugin.rs  provider.rs  target.rs  task.rs
src/oauthutil/: error.rs  google.rs  mod.rs  source.rs  store.rs  token.rs
src/system/: environment.rs  mod.rs  system_info.rs
src/util/: markdown.rs  mod.rs  path_rewriter.rs  path_util.rs  privacy.rs  string_util.rs  timing.rs  uri_ext.rs
src/web/: app.rs  contracts.rs  error.rs  mod.rs
src/web/admin/: mod.rs
src/web/api/: mod.rs
src/web/artifacts/: mod.rs
src/web/assets/: mod.rs
src/web/auth/: mod.rs
src/web/backgrounds/: mod.rs
src/web/db/: mod.rs
src/web/drafts/: mod.rs
src/web/logs/: mod.rs
template/: backend_config.toml  frontend_config.toml  nginx_frontend.conf
template/config/: backend.toml  dual.toml  frontend.toml
template/docker/: docker-compose.yaml  docker-run.cmd
template/nginx/: backend.conf  frontend.conf
template/systemd/: backend.service  frontend.service
web/: .editorconfig  .prettierignore  eslint.config.mjs  index.html  package.json  tsconfig.json  vite.config.ts
web/public/: manifest.webmanifest  sw.js
web/public/assets/: shader-worker-CJN-6C3l.js
web/src/: App.vue  main.ts  vite-env.d.ts
web/src/api/: client.ts  constants.ts  types.ts
web/src/composables/: useDocumentLocale.ts  useTheme.ts  useTypography.ts
web/src/constants/: app.ts
web/src/locales/: en.json  index.ts  zh-CN.json  zh-TW.json
web/src/router/: index.ts
web/src/stores/: session.ts
web/src/styles/: base.css  motion.css  textures.css  themes.css  tokens.css
web/src/views/: AboutView.vue  AccountView.vue  ConfigSetDetailView.vue  ConfigSetsView.vue  DashboardView.vue  DisclaimerView.vue  DocsView.vue  DraftsView.vue  LoginView.vue  LogsView.vue  MoreView.vue  RegisterView.vue  SettingsView.vue  UsersView.vue  WizardView.vue
(+28 files in other folders)
