[package]
name = "embystream"
version = "0.0.11"
edition = "2024"
rust-version = "1.85"
readme = "README.md"
license = "GPL-3.0-or-later"
authors = ["Open-PiliPili <openpilipili@gmail.com>"]
homepage = "https://github.com/Open-PiliPili/EmbyStream"
repository = "https://github.com/Open-PiliPili/EmbyStream"
keywords = ["emby", "streaming", "media", "cli"]
categories = ["command-line-utilities", "multimedia"]
description = "Another Emby streaming application (frontend/backend separation) written in Rust."

[profile.release]
strip = true

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
aes = "0.8.4"
base64 = "0.22.1"
bytes = "1.10.1"
cbc = "0.1.2"
chrono = "0.4.41"
cipher = "0.4.4"
clap = { version = "4.5.42", features = ["derive"] }
dashmap = "6.1.0"
deranged = "=0.4.0"
directories = "6.0.0"
figlet-rs = "0.1.5"
form_urlencoded = "1.2.1"
futures-util = "0.3.31"
generic-array = "1.2.0"
hyper = { version = "1.6.0", features = ["full"] }
hyper-util = { version = "0.1.16", features = ["full"] }
http-body-util = "0.1.3"
http-range-header = "0.4.2"
http-serde = "2.1.1"
lazy_static = "1.5.0"
libc = "0.2.174"
md5 = "0.8.0"
moka = { version = "0.12.10", features = ["future", "sync"] }
once_cell = "1.21.3"
percent-encoding = "2.3.1"
regex = "1.11.1"
reqwest = { version = "0.12.22", default-features = false, features = [
    "gzip",
    "http2",
    "json",
    "multipart",
    "rustls-tls",
    "rustls-tls-native-roots",
    "stream"
] }
rustls = { version = "0.23.31", features = ["aws-lc-rs"] }
rustls-pemfile = "2.2.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
serde_urlencoded = "0.7.1"
thiserror = "2.0.12"
time = { version = "0.3.41", features = ["macros", "local-offset"] }
tokio = { version = "1.47.0", features = ["rt", "rt-multi-thread", "macros", "process", "signal"] }
tokio-rustls = "0.26.2"
tokio-stream = "0.1.17"
toml = "0.9.4"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = [
    "std",
    "fmt",
    "env-filter",
    "tracing-log",
    "time",
    "local-time",
    "json"
] }