[package]
name = "embystream"
version = "0.0.21"
edition = "2024"
rust-version = "1.85"
readme = "README.md"
license = "GPL-3.0-or-later"
authors = ["Open-PiliPili <openpilipili@gmail.com>"]
homepage = "https://github.com/Open-PiliPili/EmbyStream"
repository = "https://github.com/Open-PiliPili/EmbyStream"
keywords = ["emby", "streaming", "media", "cli"]
categories = ["command-line-utilities", "multimedia"]
description = "Another Emby streaming application (frontend/backend separation) written in Rust."

[profile.release]
strip = true

[dependencies]
aes = "0.8.4"
anyhow = "1.0.102"
async-trait = "0.1.89"
base64 = "0.22.1"
bytes = "1.11.1"
cbc = "0.1.2"
chrono = { version = "0.4.44", features = ["serde"] }
cipher = "0.4.4"
clap = { version = "4.6.0", features = ["derive", "color"] }
console = "0.16.3"
dialoguer = "0.12.0"
dashmap = "6.1.0"
directories = "6.0.0"
figlet-rs = "0.1.5"
form_urlencoded = "1.2.2"
futures-util = "0.3.32"
generic-array = "1.3.5"
http-body-util = "0.1.3"
http-range-header = "0.4.2"
http-serde = "2.1.1"
hyper = { version = "1.8.1", features = ["full"] }
hyper-rustls = { version = "0.27.7", default-features = false, features = [
  "http1",
  "native-tokio",
  "tls12",
  "rustls-native-certs",
] }
hyper-util = { version = "0.1.20", features = ["full"] }
lazy_static = "1.5.0"
libc = "0.2.183"
md5 = "0.8.0"
moka = { version = "0.12.15", features = ["future", "sync"] }
once_cell = "1.21.4"
percent-encoding = "2.3.2"
rand = "0.8.5"
regex = "1.12.3"
reqwest = { version = "0.12.28", default-features = false, features = [
  "gzip",
  "http2",
  "json",
  "multipart",
  "rustls-tls",
  "rustls-tls-native-roots",
  "stream",
] }
rustls = { version = "0.23.37", features = ["aws-lc-rs"] }
rustls-pemfile = "2.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3.27.0"
serde_urlencoded = "0.7.1"
thiserror = "2.0.18"
time = { version = "0.3.45", features = ["macros", "local-offset"] }
tokio = { version = "1.50.0", features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "process",
  "signal",
  "sync",
] }
tokio-rustls = "0.26.4"
tokio-stream = "0.1.18"
toml = "0.9.12"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.23", features = ["std", "fmt", "env-filter", "tracing-log", "json", "time", "local-time"] }
uuid = { version = "1.22.0", features = ["v4"] }
